testdata/invalid/invalid_bitflags_unknown_name.bop
[flags]
enum Flags : int32 {
    A = B;
}